# DrugMechDB-agentic

./: .gitignore  AGENTS.md  CLAUDE.md  justfile  pyproject.toml
.claude/: .mcp.json  settings.json
.github/: labels.yml
conf/: oak_config.yaml
data/: predicate_aliases.yaml
docs/: PRD_v3.md  biolink_ontology_drift_report.md  checkpoint_metrics.json  drift_audit_mesh.json  drift_audit_nodes.json  drift_audit_predicates.json  mesh_node_drift_report.md  multipath_convention.md  path_quality_framework.md  phase1_5_canonicalization_summary.json  phase1_5_predicate_canonicalization.md  phase1_validation_failures.json  phase1_validation_report.md  phase2_gap_report.md  phase2_layer2_failures.json  phase2_report.md  phase3_eval.md  phase3_eval_pairs.yaml  phase3_eval_results.json  phase3_eval_results.md  phase3_report.md  predicate_qualifier_remap.json  predicate_qualifier_remap.md  quality_system_design.md  tooling_audit.md
references_cache/: PMID_10336454.md  PMID_105363.md  PMID_10597333.md  PMID_10698507.md  PMID_10727459.md  PMID_10988075.md  PMID_11106871.md  PMID_11233299.md  PMID_11237011.md  PMID_11284774.md  PMID_11287972.md  PMID_11354013.md  PMID_11423618.md  PMID_11423669.md  PMID_1159076.md  PMID_11673664.md  PMID_11677207.md  PMID_11786451.md  PMID_11788561.md  PMID_11853363.md  PMID_11877317.md  PMID_11905636.md  PMID_11956737.md  PMID_12071509.md  PMID_12071511.md  PMID_12106498.md  PMID_12452755.md  PMID_12498003.md  PMID_12747285.md  PMID_12806611.md  PMID_12907793.md  PMID_12944494.md  PMID_14604282.md  PMID_14634798.md  PMID_14684579.md  (+691 more)
(+6691 files in other folders)
